2018-11-08 Stuart Caie <kyzer@cabextract.org.uk>

	* src/cabextract.c: make multiple attempts at iconv_open() with
	different names for the UTF-8 encoding: "UTF-8", "UTF8" and "UTF_8".

	"UTF8" works with glibc, libiconv, newlib, Solaris libc and FreeBSD
	libc, while "UTF-8" doesn't work with newlib. But if you have
	libiconv >= 1.13, it removes "UTF8" support unless you define
	USE_HPUX_ALIASES, or patch it back in (as Cygwin does).
	Thanks to Ryan Schmidt for letting me know about this.

2018-11-03 Stuart Caie <kyzer@cabextract.org.uk>

	* test: use the autotools test system instead of a custom makefile.
	You can now use 'make check' to test cabextract, and the test files
	are now distributed with cabextract.

2018-10-30  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: remove obsolescent C library tests. AC_HEADER_STDC is
	removed, and so are most checks for standard C headers. cabextract now
	makes these assumptions:
	- <ctype.h> <dirent.h> <errno.h> <limits.h> <locale.h> <stdarg.h>
	  <stdlib.h> <string.h> <sys/stat.h> <sys/types.h> <time.h> exist
	- <time.h> is protected from double-inclusion (AC_HEADER_TIME obsolete)
	- if you have iconv(), towlower(), utime(), utimes(), you also
	  have their header files
	- BSD has memcpy(), memmove(), strrchr() in <string.h> and has
	  strcasecmp() in <strings.h>

2018-10-26  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac, Makefile.am: use pkg-config's PKG_CHECK_MODULES
	when looking for an external libmspack. You still need to supply
	--with-external-libmspack to use an external libmspack. If you
	don't like or use pkg-config, you can set the environment variables
	libmspack_CFLAGS and libmspack_LIBS before running configure.

2018-10-26  Stuart Caie <kyzer@cabextract.org.uk>

	* autogen.sh, distcheck.sh: I've introduced new build scripts.
	Use cleanup.sh to remove all generated files, autogen.sh to
	generate the configure script, rebuild.sh to (re)build and test