@@ -8,9 +8,10 @@ bundled_mspack =        mspack/mspack.h \
                         mspack/qtm.h mspack/qtmd.c \
                         mspack/readbits.h mspack/readhuff.h
 
-TESTS =                 test/bugs.test test/case.test test/dirwalk-vulns.test \
-                        test/encoding.test test/mixed.test test/search.test \
-                        test/simple.test test/split.test test/utf8-stresstest.test
+TESTS =                 test/bugs.test test/case-ascii.test test/case-utf8.test \
+                        test/dirwalk-vulns.test test/encoding.test \
+                        test/mixed.test test/search.test test/simple.test \
+                        test/split.test test/utf8-stresstest.test
 
 EXTRA_DIST =            cabextract.spec \
                         doc/cabextract.1 doc/ja/cabextract.1 \
