@@ -1,6 +1,4 @@
-# test that cabextract can lowercase ASCII and UTF-8 filenames
-ascii\upper\ABCDEFGHIJKLMNOPQRSTUVWXYZ
-ascii\lower\abcdefghijklmnopqrstuvwxyz
+# test that cabextract can lowercase UTF-8 filenames
 latin1\upper\ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖØÙÚÛÜÝÞ
 latin1\lower\àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
 greek\upper\ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ
