@@ -2,13 +2,19 @@
 # test cabextract --lowercase and --directory options
 . test/testcase
 
-$cabextract -l cabs/case.cab >$actual
+# skip test if environment has no UTF-8 locale, where
+# cabextract can't lowercase non-ASCII characters
+$cabextract -l    cabs/case-utf8.cab >$expected
+$cabextract -L -l cabs/case-utf8.cab >$actual
+if diff $expected $actual >/dev/null; then
+    exit 77
+fi
+
+$cabextract -l cabs/case-utf8.cab >$actual
 compare_with <<'EOF'
-Viewing cabinet: cabs/case.cab
+Viewing cabinet: cabs/case-utf8.cab
  File size | Date       Time     | Name
 -----------+---------------------+-------------
-         0 | 12.03.1997 11:13:52 | ascii/upper/ABCDEFGHIJKLMNOPQRSTUVWXYZ
-         0 | 12.03.1997 11:13:52 | ascii/lower/abcdefghijklmnopqrstuvwxyz
          0 | 12.03.1997 11:13:52 | latin1/upper/ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖØÙÚÛÜÝÞ
          0 | 12.03.1997 11:13:52 | latin1/lower/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | greek/upper/ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ
@@ -19,13 +25,11 @@ Viewing cabinet: cabs/case.cab
 All done, no errors.
 EOF
 
-$cabextract  -L -l cabs/case.cab >$actual
+$cabextract  -L -l cabs/case-utf8.cab >$actual
 compare_with <<'EOF'
-Viewing cabinet: cabs/case.cab
+Viewing cabinet: cabs/case-utf8.cab
  File size | Date       Time     | Name
 -----------+---------------------+-------------
-         0 | 12.03.1997 11:13:52 | ascii/upper/abcdefghijklmnopqrstuvwxyz
-         0 | 12.03.1997 11:13:52 | ascii/lower/abcdefghijklmnopqrstuvwxyz
          0 | 12.03.1997 11:13:52 | latin1/upper/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | latin1/lower/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | greek/upper/αβγδεζηθικλμνξοπρστυφχψω
@@ -36,13 +40,11 @@ Viewing cabinet: cabs/case.cab
 All done, no errors.
 EOF
 
-$cabextract -d DIR/PATH -l cabs/case.cab >$actual
+$cabextract -d DIR/PATH -l cabs/case-utf8.cab >$actual
 compare_with <<'EOF'
-Viewing cabinet: cabs/case.cab
+Viewing cabinet: cabs/case-utf8.cab
  File size | Date       Time     | Name
 -----------+---------------------+-------------
-         0 | 12.03.1997 11:13:52 | DIR/PATH/ascii/upper/ABCDEFGHIJKLMNOPQRSTUVWXYZ
-         0 | 12.03.1997 11:13:52 | DIR/PATH/ascii/lower/abcdefghijklmnopqrstuvwxyz
          0 | 12.03.1997 11:13:52 | DIR/PATH/latin1/upper/ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖØÙÚÛÜÝÞ
          0 | 12.03.1997 11:13:52 | DIR/PATH/latin1/lower/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | DIR/PATH/greek/upper/ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ
@@ -53,13 +55,11 @@ Viewing cabinet: cabs/case.cab
 All done, no errors.
 EOF
 
-$cabextract -d DIR/PATH -L -l cabs/case.cab >$actual
+$cabextract -d DIR/PATH -L -l cabs/case-utf8.cab >$actual
 compare_with <<'EOF'
-Viewing cabinet: cabs/case.cab
+Viewing cabinet: cabs/case-utf8.cab
  File size | Date       Time     | Name
 -----------+---------------------+-------------
-         0 | 12.03.1997 11:13:52 | DIR/PATH/ascii/upper/abcdefghijklmnopqrstuvwxyz
-         0 | 12.03.1997 11:13:52 | DIR/PATH/ascii/lower/abcdefghijklmnopqrstuvwxyz
          0 | 12.03.1997 11:13:52 | DIR/PATH/latin1/upper/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | DIR/PATH/latin1/lower/àáâãäåæçèéêëìíîïðñòóôõöøùúûüýþ
          0 | 12.03.1997 11:13:52 | DIR/PATH/greek/upper/αβγδεζηθικλμνξοπρστυφχψω
