@@ -1,3 +1,11 @@
+2018-11-09 Stuart Caie <kyzer@cabextract.org.uk>
+
+	* test/case-utf8.test: Some environments (e.g. DJGPP) don't have a
+	UTF-8 locale, so won't pass the case.test testcase. Break it into
+	case-ascii.test and case-utf8.test, and skip the latter if
+	"cabextract -L" has no effect on non-ASCII filenames. Thanks to
+	Robert Riebisch for highlighting this.
+
 2018-11-08 Stuart Caie <kyzer@cabextract.org.uk>
 
 	* src/cabextract.c: make multiple attempts at iconv_open() with
